--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
-        android:name="com.haulmont.arthur.permission.C2D_MESSAGE"
+        android:name="com.appbonus.android.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="com.haulmont.arthur.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.appbonus.android.permission.C2D_MESSAGE" />
 
     <application
         android:name=".BonusApplication"
