--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="@string/name_db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="@integer/version_db" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="@string/models" />
         <receiver
             android:name=".push.GoogleCloudMessagingBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
