--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,11 @@
                 <category android:name="com.appbonus.android"/>
             </intent-filter>
         </receiver>
+        <receiver android:name="com.mobileapptracker.Tracker" android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.vending.INSTALL_REFERRER" />
+            </intent-filter>
+        </receiver>
         <service android:name=".push.BonusGCMService"/>
 
         <activity
