--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,16 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://repo.commonsware.com.s3.amazonaws.com"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.commonsware.cwac:anddown:0.2.3'
+
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v13:20.0.0'
 
