запрещаем использовать приложение устройствам с root

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
         <activity
             android:name=".ui.login.LoginVkActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.RootedDeviceActivity"/>
     </application>
 
 </manifest>
