--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         <activity
             android:name=".ui.login.LoginVkActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.RootedDeviceActivity"/>
+        <activity android:name=".ui.BannedDeviceActivity"/>
     </application>
 
 </manifest>
