--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     /*markdown*/
     compile 'com.commonsware.cwac:anddown:0.2.3'
 
+    /*vkontakte*/
+    compile 'com.vk:androidsdk:1.3.9'
+
     /*support-libraries*/
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v13:20.0.0'
